# ga2o3-defect-dichroism

./: LICENSE  README.md  pyproject.toml
crystal23/1x2x2/Ga2O3_1x2x2_OCTA_VAC/: Ga2O3_1x2x2_OCTA_VAC_SCF.d12  Ga2O3_1x2x2_OCTA_VAC_SCF.out  Ga2O3_1x2x2_OCTA_VAC_SCF_BAND_ERRATUM_DEF.outp  Ga2O3_1x2x2_OCTA_VAC_SCF_ECH3.outp
crystal23/1x2x2/Ga2O3_1x2x2_O_1_VAC/: Ga2O3_Ovac_1_SCF.d12  (+6 more)
crystal23/ANBD/: GaO_PRISTINE_18HF_ANBD.d3
crystal23/BANDS/: GaO_PRISTINE_18HF_BAND_ERRATUM_DEF.d3
crystal23/DOS/: GaO_OCTA_18HF_DOS.d3
crystal23/ECHG/: Ga2O3_VAC_OCTAHEDRAL_ECHG.d3  Ga2O3_VAC_TETRA_ECHG_03.d3  GaO_PRISTINE_ECHG.d3
crystal23/INPUTS/: Ga2O3_HSE06_OCTA_FULL_RELAX.d12  Ga2O3_HSE06_PRISTINE_FULL_RELAX.d12  Ga2O3_HSE06_TETRA_FULL_RELAX.d12.d12.d12  GaO_OCTA_18HF.d12  GaO_PRISTINE_18HF.d12  GaO_TETRA_18HF.d12
data/ANBD/: GaO_OCTA_18HF_ANBD.outp  GaO_PRISTINE_18HF_ANBD.outp  GaO_TETRA_18HF_ANBD.outp
data/DOS/: Ga2O3_DOS_Oxygens.d3  GaO_OCTA_18HF_DOS_dat_ALPHA.DOSS  GaO_OCTA_18HF_DOS_dat_ALPHA_positive.DOSS  GaO_OCTA_18HF_DOS_dat_BETA.DOSS  GaO_OCTA_18HF_DOS_dat_BETA_negative.DOSS  GaO_TETRA_18HF_DOS_dat_ALPHA.DOSS  GaO_TETRA_18HF_DOS_dat_ALPHA_positive.DOSS  GaO_TETRA_18HF_DOS_dat_BETA.DOSS  GaO_TETRA_18HF_DOS_dat_BETA_negative.DOSS
data/formation_energy/: FormationEnergies.xlsx
src/ga2o3/: __init__.py  cli.py  constants.py  dataset.py  util.py
tests/: conftest.py  test_band.py  test_cphf.py  test_dataset.py  test_doss.py  test_f25.py  test_plots_smoke.py
tests/data/: sample.BAND  sample.f25  sample_alpha.DOSS  sample_beta.DOSS  sample_cphf.out
(+118 files in other folders)
